--- a/domain_comparison/Comparision_domain_slicing_rdm.ipynb
+++ b/domain_comparison/Comparision_domain_slicing_rdm.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:17:41.094337Z",
-     "end_time": "2023-07-06T22:17:41.143524Z"
+     "start_time": "2023-07-06T23:08:23.300645Z",
+     "end_time": "2023-07-06T23:08:23.392980Z"
     }
    },
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 80,
    "outputs": [
     {
      "name": "stdout",
@@ -78,8 +78,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:17:41.100501Z",
-     "end_time": "2023-07-06T22:17:41.163883Z"
+     "start_time": "2023-07-06T23:08:23.302723Z",
+     "end_time": "2023-07-06T23:08:23.397991Z"
     }
    }
   },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 81,
    "outputs": [
     {
      "name": "stdout",
@@ -137,8 +137,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:17:41.114160Z",
-     "end_time": "2023-07-06T22:17:41.164436Z"
+     "start_time": "2023-07-06T23:08:23.331469Z",
+     "end_time": "2023-07-06T23:08:23.399856Z"
     }
    }
   },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 82,
    "outputs": [
     {
      "name": "stdout",
@@ -182,8 +182,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:17:41.121353Z",
-     "end_time": "2023-07-06T22:17:41.165322Z"
+     "start_time": "2023-07-06T23:08:23.337001Z",
+     "end_time": "2023-07-06T23:08:23.400915Z"
     }
    }
   },
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 83,
    "outputs": [
     {
      "name": "stdout",
@@ -227,8 +227,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:17:41.127081Z",
-     "end_time": "2023-07-06T22:17:41.165762Z"
+     "start_time": "2023-07-06T23:08:23.343176Z",
+     "end_time": "2023-07-06T23:08:23.406638Z"
     }
    }
   },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 84,
    "outputs": [
     {
      "name": "stdout",
@@ -272,8 +272,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:17:41.132027Z",
-     "end_time": "2023-07-06T22:17:41.165801Z"
+     "start_time": "2023-07-06T23:08:23.348569Z",
+     "end_time": "2023-07-06T23:08:23.408446Z"
     }
    }
   },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 85,
    "outputs": [
     {
      "name": "stdout",
@@ -317,8 +317,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:17:41.137077Z",
-     "end_time": "2023-07-06T22:17:41.166199Z"
+     "start_time": "2023-07-06T23:08:23.352627Z",
+     "end_time": "2023-07-06T23:08:23.408770Z"
     }
    }
   },
@@ -342,16 +342,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 86,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "GNN\n",
-      "Mann-Whitney U statistic: 1095.0\n",
-      "p-value: 0.14202581351555174\n",
-      "The two lists of means do not differ significantly!\n",
+      "Mann-Whitney U statistic: 1813.0\n",
+      "p-value: 1.7246722571142915e-14\n",
+      "The two lists of means differ significantly!\n",
       "GWN\n",
       "Mann-Whitney U statistic: 1312.0\n",
       "p-value: 0.00032983852077799353\n",
@@ -391,8 +391,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:22:29.012919Z",
-     "end_time": "2023-07-06T22:22:29.024115Z"
+     "start_time": "2023-07-06T23:08:23.358800Z",
+     "end_time": "2023-07-06T23:08:23.408823Z"
     }
    }
   },
@@ -407,16 +407,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 87,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "GNN\n",
-      "Mann-Whitney U statistic: 255.0\n",
-      "p-value: 0.14041971470550127\n",
-      "The two lists of means do not differ significantly!\n",
+      "Mann-Whitney U statistic: 396.0\n",
+      "p-value: 1.2346350154956704e-07\n",
+      "The two lists of means differ significantly!\n",
       "GWN\n",
       "Mann-Whitney U statistic: 342.0\n",
       "p-value: 2.0738992298297693e-05\n",
@@ -456,8 +456,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:23:54.777942Z",
-     "end_time": "2023-07-06T22:23:54.793048Z"
+     "start_time": "2023-07-06T23:08:23.366797Z",
+     "end_time": "2023-07-06T23:08:23.409022Z"
     }
    }
   },
@@ -472,16 +472,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 88,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "GNN\n",
-      "Mann-Whitney U statistic: 454.0\n",
-      "p-value: 0.6078164581989167\n",
-      "The two lists of means do not differ significantly!\n",
+      "Mann-Whitney U statistic: 783.0\n",
+      "p-value: 1.4424242043992082e-10\n",
+      "The two lists of means differ significantly!\n",
       "GWN\n",
       "Mann-Whitney U statistic: 724.0\n",
       "p-value: 5.2125540479975956e-08\n",
@@ -521,8 +521,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:25:00.849561Z",
-     "end_time": "2023-07-06T22:25:00.872930Z"
+     "start_time": "2023-07-06T23:08:23.373575Z",
+     "end_time": "2023-07-06T23:08:23.409079Z"
     }
    }
   },
@@ -537,16 +537,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 89,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "GNN\n",
-      "Mann-Whitney U statistic: 15308.0\n",
-      "p-value: 0.006583652573788749\n",
-      "The two lists of means differ significantly!\n",
+      "Mann-Whitney U statistic: 19678.0\n",
+      "p-value: 0.15391913242230018\n",
+      "The two lists of means do not differ significantly!\n",
       "GWN\n",
       "Mann-Whitney U statistic: 18643.0\n",
       "p-value: 0.5796439002699463\n",
@@ -586,8 +586,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:25:55.601872Z",
-     "end_time": "2023-07-06T22:25:55.616997Z"
+     "start_time": "2023-07-06T23:08:23.387501Z",
+     "end_time": "2023-07-06T23:08:23.409409Z"
     }
    }
   },
@@ -602,16 +602,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 90,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "GNN\n",
-      "Mann-Whitney U statistic: 609.0\n",
-      "p-value: 0.6645802775986182\n",
-      "The two lists of means do not differ significantly!\n",
+      "Mann-Whitney U statistic: 1296.0\n",
+      "p-value: 3.0463409828899006e-13\n",
+      "The two lists of means differ significantly!\n",
       "GWN\n",
       "Mann-Whitney U statistic: 1044.0\n",
       "p-value: 8.419262842079743e-06\n",
@@ -651,22 +651,31 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:28:50.901790Z",
-     "end_time": "2023-07-06T22:28:50.918295Z"
+     "start_time": "2023-07-06T23:08:23.390366Z",
+     "end_time": "2023-07-06T23:08:23.409478Z"
     }
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### regulatory domain"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 91,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "GNN\n",
-      "Mann-Whitney U statistic: 982.0\n",
-      "p-value: 0.0070204955064879625\n",
+      "Mann-Whitney U statistic: 1119.0\n",
+      "p-value: 3.803156211785148e-05\n",
       "The two lists of means differ significantly!\n",
       "GWN\n",
       "Mann-Whitney U statistic: 1309.0\n",
@@ -707,18 +716,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:30:01.038249Z",
-     "end_time": "2023-07-06T22:30:01.056257Z"
+     "start_time": "2023-07-06T23:08:23.397755Z",
+     "end_time": "2023-07-06T23:08:23.409561Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-06T23:08:23.404306Z",
+     "end_time": "2023-07-06T23:08:23.409592Z"
+    }
    }
   }
  ],
