--- a/domain_comparison/Domain_slicing_smu.ipynb
+++ b/domain_comparison/Domain_slicing_smu.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:41.064703Z",
-     "end_time": "2023-07-06T22:34:41.194693Z"
+     "start_time": "2023-07-06T23:03:00.434597Z",
+     "end_time": "2023-07-06T23:03:00.560355Z"
     }
    },
    "outputs": [],
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:41.091483Z",
-     "end_time": "2023-07-06T22:34:42.171183Z"
+     "start_time": "2023-07-06T23:03:00.444037Z",
+     "end_time": "2023-07-06T23:03:01.572301Z"
     }
    },
    "outputs": [
@@ -56,7 +56,7 @@
       "text/plain": "     mutant                                   mutated_sequence  DMS_score  \\\n4       M1V  VEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -0.326163   \n5       M1T  TEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -0.198160   \n6       M1R  REEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -0.206957   \n10      M1L  LEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -0.130986   \n16      M1I  IEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -0.134540   \n...     ...                                                ...        ...   \n7456  D393H  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.118893   \n7460  D393G  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -0.035140   \n7462  D393E  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -0.133264   \n7464  D393A  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.226672   \n7466  D393Y  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -0.298285   \n\n      DMS_score_bin  position_mut AS_old AS_new  \n4               1.0             1      M      V  \n5               1.0             1      M      T  \n6               1.0             1      M      R  \n10              1.0             1      M      L  \n16              1.0             1      M      I  \n...             ...           ...    ...    ...  \n7456            1.0           393      D      H  \n7460            1.0           393      D      G  \n7462            1.0           393      D      E  \n7464            1.0           393      D      A  \n7466            1.0           393      D      Y  \n\n[2320 rows x 7 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>mutant</th>\n      <th>mutated_sequence</th>\n      <th>DMS_score</th>\n      <th>DMS_score_bin</th>\n      <th>position_mut</th>\n      <th>AS_old</th>\n      <th>AS_new</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>4</th>\n      <td>M1V</td>\n      <td>VEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-0.326163</td>\n      <td>1.0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>V</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>M1T</td>\n      <td>TEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-0.198160</td>\n      <td>1.0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>T</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>M1R</td>\n      <td>REEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-0.206957</td>\n      <td>1.0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>R</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>M1L</td>\n      <td>LEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-0.130986</td>\n      <td>1.0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>L</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>M1I</td>\n      <td>IEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-0.134540</td>\n      <td>1.0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>I</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>7456</th>\n      <td>D393H</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.118893</td>\n      <td>1.0</td>\n      <td>393</td>\n      <td>D</td>\n      <td>H</td>\n    </tr>\n    <tr>\n      <th>7460</th>\n      <td>D393G</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-0.035140</td>\n      <td>1.0</td>\n      <td>393</td>\n      <td>D</td>\n      <td>G</td>\n    </tr>\n    <tr>\n      <th>7462</th>\n      <td>D393E</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-0.133264</td>\n      <td>1.0</td>\n      <td>393</td>\n      <td>D</td>\n      <td>E</td>\n    </tr>\n    <tr>\n      <th>7464</th>\n      <td>D393A</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.226672</td>\n      <td>1.0</td>\n      <td>393</td>\n      <td>D</td>\n      <td>A</td>\n    </tr>\n    <tr>\n      <th>7466</th>\n      <td>D393Y</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-0.298285</td>\n      <td>1.0</td>\n      <td>393</td>\n      <td>D</td>\n      <td>Y</td>\n    </tr>\n  </tbody>\n</table>\n<p>2320 rows × 7 columns</p>\n</div>"
      },
-     "execution_count": 100,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:42.175291Z",
-     "end_time": "2023-07-06T22:34:42.248665Z"
+     "start_time": "2023-07-06T23:03:01.576312Z",
+     "end_time": "2023-07-06T23:03:01.681028Z"
     }
    },
    "outputs": [],
@@ -153,26 +153,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:42.246494Z",
-     "end_time": "2023-07-06T22:34:42.278081Z"
+     "start_time": "2023-07-06T23:03:01.648371Z",
+     "end_time": "2023-07-06T23:03:01.681242Z"
     }
    },
    "outputs": [],
    "source": [
     "t1_mean = t1_domain.mean().rename('mean')\n",
-    "\n",
+    "t1_mean.to_csv('./data/t1_gnn_smu')\n",
     "t2_mean = t2_domain.mean().rename('mean')\n",
-    "\n",
+    "t2_mean.to_csv('./data/t2_gnn_smu')\n",
     "pr_mean = pr_domain.mean().rename('mean')\n",
-    "\n",
+    "pr_mean.to_csv('./data/pr_gnn_smu')\n",
     "dna_mean = dna_domain.mean().rename('mean')\n",
-    "\n",
+    "dna_mean.to_csv('./data/dna_gnn_smu')\n",
     "tetra_mean = tetra_domain.mean().rename('mean')\n",
-    "\n",
-    "reg_mean = reg_domain.mean().rename('mean')\n"
+    "tetra_mean.to_csv('./data/tetra_gnn_smu')\n",
+    "reg_mean = reg_domain.mean().rename('mean')\n",
+    "reg_mean.to_csv('./data/reg_gnn_smu')"
    ]
   },
   {
@@ -185,11 +186,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:42.291337Z",
-     "end_time": "2023-07-06T22:34:42.647893Z"
+     "start_time": "2023-07-06T23:03:01.668918Z",
+     "end_time": "2023-07-06T23:03:01.978958Z"
     }
    },
    "outputs": [
@@ -213,7 +214,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 103,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -250,11 +251,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:42.664168Z",
-     "end_time": "2023-07-06T22:34:43.056026Z"
+     "start_time": "2023-07-06T23:03:01.981639Z",
+     "end_time": "2023-07-06T23:03:02.484590Z"
     }
    },
    "outputs": [
@@ -270,7 +271,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 104,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -305,11 +306,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:43.064076Z",
-     "end_time": "2023-07-06T22:34:43.535253Z"
+     "start_time": "2023-07-06T23:03:02.449577Z",
+     "end_time": "2023-07-06T23:03:02.703957Z"
     }
    },
    "outputs": [
@@ -325,7 +326,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 105,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -359,11 +360,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:43.542452Z",
-     "end_time": "2023-07-06T22:34:43.857895Z"
+     "start_time": "2023-07-06T23:03:02.711102Z",
+     "end_time": "2023-07-06T23:03:03.101027Z"
     }
    },
    "outputs": [
@@ -387,7 +388,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 106,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -425,11 +426,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:43.884790Z",
-     "end_time": "2023-07-06T22:34:44.137173Z"
+     "start_time": "2023-07-06T23:03:03.101227Z",
+     "end_time": "2023-07-06T23:03:03.391082Z"
     }
    },
    "outputs": [
@@ -453,7 +454,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 107,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -496,11 +497,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:44.140964Z",
-     "end_time": "2023-07-06T22:34:44.423466Z"
+     "start_time": "2023-07-06T23:03:03.398160Z",
+     "end_time": "2023-07-06T23:03:03.686259Z"
     }
    },
    "outputs": [
@@ -516,7 +517,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 108,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -553,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 30,
    "outputs": [
     {
      "data": {
@@ -597,8 +598,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:44.427578Z",
-     "end_time": "2023-07-06T22:34:44.573629Z"
+     "start_time": "2023-07-06T23:03:03.691306Z",
+     "end_time": "2023-07-06T23:03:03.891831Z"
     }
    }
   },
@@ -611,11 +612,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:44.579845Z",
-     "end_time": "2023-07-06T22:34:44.584813Z"
+     "start_time": "2023-07-06T23:03:03.895731Z",
+     "end_time": "2023-07-06T23:03:04.003756Z"
     }
    },
    "outputs": [
@@ -624,7 +625,7 @@
       "text/plain": "     t1_std    t2_std    pr_std   dna_std  tetra_std  reg_std\n0  0.066017  0.040587  0.051343  0.084284   0.093598  0.05141",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>t1_std</th>\n      <th>t2_std</th>\n      <th>pr_std</th>\n      <th>dna_std</th>\n      <th>tetra_std</th>\n      <th>reg_std</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.066017</td>\n      <td>0.040587</td>\n      <td>0.051343</td>\n      <td>0.084284</td>\n      <td>0.093598</td>\n      <td>0.05141</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 110,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,11 +660,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:44.584330Z",
-     "end_time": "2023-07-06T22:34:44.794597Z"
+     "start_time": "2023-07-06T23:03:03.953968Z",
+     "end_time": "2023-07-06T23:03:04.290122Z"
     }
    },
    "outputs": [
@@ -671,7 +672,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 111,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -691,11 +692,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:44.811692Z",
-     "end_time": "2023-07-06T22:34:44.962184Z"
+     "start_time": "2023-07-06T23:03:04.234070Z",
+     "end_time": "2023-07-06T23:03:04.414795Z"
     }
    },
    "outputs": [
@@ -703,7 +704,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 112,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -723,11 +724,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:44.965024Z",
-     "end_time": "2023-07-06T22:34:45.124610Z"
+     "start_time": "2023-07-06T23:03:04.419004Z",
+     "end_time": "2023-07-06T23:03:04.674079Z"
     }
    },
    "outputs": [
@@ -735,7 +736,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 113,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -755,11 +756,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:45.124679Z",
-     "end_time": "2023-07-06T22:34:45.312668Z"
+     "start_time": "2023-07-06T23:03:04.675384Z",
+     "end_time": "2023-07-06T23:03:04.850388Z"
     }
    },
    "outputs": [
@@ -767,7 +768,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 114,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -787,11 +788,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:45.312889Z",
-     "end_time": "2023-07-06T22:34:45.524030Z"
+     "start_time": "2023-07-06T23:03:04.852085Z",
+     "end_time": "2023-07-06T23:03:05.021902Z"
     }
    },
    "outputs": [
@@ -799,7 +800,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 115,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -819,11 +820,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:45.552754Z",
-     "end_time": "2023-07-06T22:34:45.829370Z"
+     "start_time": "2023-07-06T23:03:05.022946Z",
+     "end_time": "2023-07-06T23:03:05.184162Z"
     }
    },
    "outputs": [
@@ -831,7 +832,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 116,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -862,11 +863,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-06T22:34:45.827029Z",
-     "end_time": "2023-07-06T22:34:45.832975Z"
+     "start_time": "2023-07-06T23:03:05.185324Z",
+     "end_time": "2023-07-06T23:03:05.188180Z"
     }
    },
    "outputs": [
