--- a/domain_comparison/Domain_slicing_smu.ipynb
+++ b/domain_comparison/Domain_slicing_smu.ipynb
@@ -163,17 +163,16 @@
    "outputs": [],
    "source": [
     "t1_mean = t1_domain.mean().rename('mean')\n",
-    "t1_mean.to_csv('./data/t1_gnn_smu')\n",
+    "\n",
     "t2_mean = t2_domain.mean().rename('mean')\n",
-    "t2_mean.to_csv('./data/t2_gnn_smu')\n",
+    "\n",
     "pr_mean = pr_domain.mean().rename('mean')\n",
-    "pr_mean.to_csv('./data/pr_gnn_smu')\n",
+    "\n",
     "dna_mean = dna_domain.mean().rename('mean')\n",
-    "dna_mean.to_csv('./data/dna_gnn_smu')\n",
+    "\n",
     "tetra_mean = tetra_domain.mean().rename('mean')\n",
-    "tetra_mean.to_csv('./data/tetra_gnn_smu')\n",
-    "reg_mean = reg_domain.mean().rename('mean')\n",
-    "reg_mean.to_csv('./data/reg_gnn_smu')"
+    "\n",
+    "reg_mean = reg_domain.mean().rename('mean')\n"
    ]
   },
   {
