--- a/domain_comparison/Domain_slicing_rdm.ipynb
+++ b/domain_comparison/Domain_slicing_rdm.ipynb
@@ -35,7 +35,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Starting out with Generation of the new DF with only the single mutations"
+    "Starting out with Generation of the new DF with only the random mutations"
    ],
    "metadata": {
     "collapsed": false
@@ -163,17 +163,16 @@
    "outputs": [],
    "source": [
     "t1_mean = t1_domain.mean().rename('mean')\n",
-    "t1_mean.to_csv('./data/t1_gnn_rdm')\n",
+    "\n",
     "t2_mean = t2_domain.mean().rename('mean')\n",
-    "t2_mean.to_csv('./data/t2_gnn_rdm')\n",
+    "\n",
     "pr_mean = pr_domain.mean().rename('mean')\n",
-    "pr_mean.to_csv('./data/pr_gnn_rdm')\n",
+    "\n",
     "dna_mean = dna_domain.mean().rename('mean')\n",
-    "dna_mean.to_csv('./data/dna_gnn_rdm')\n",
+    "\n",
     "tetra_mean = tetra_domain.mean().rename('mean')\n",
-    "tetra_mean.to_csv('./data/tetra_gnn_rdm')\n",
-    "reg_mean = reg_domain.mean().rename('mean')\n",
-    "reg_mean.to_csv('./data/reg_gnn_rdm')"
+    "\n",
+    "reg_mean = reg_domain.mean().rename('mean')\n"
    ]
   },
   {
