--- a/domain_comparison/Comparision_domain_slicing.ipynb
+++ b/domain_comparison/Comparision_domain_slicing.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-06T00:03:55.915440Z",
-     "end_time": "2023-07-06T00:03:55.916650Z"
+     "start_time": "2023-07-06T23:20:38.996613Z",
+     "end_time": "2023-07-06T23:20:38.998652Z"
     }
    },
    "outputs": [],
@@ -69,8 +69,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T00:03:55.918071Z",
-     "end_time": "2023-07-06T00:03:55.926815Z"
+     "start_time": "2023-07-06T23:20:38.998506Z",
+     "end_time": "2023-07-06T23:20:39.004186Z"
     }
    }
   },
@@ -121,8 +121,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T00:03:55.927497Z",
-     "end_time": "2023-07-06T00:03:55.931625Z"
+     "start_time": "2023-07-06T23:20:39.005355Z",
+     "end_time": "2023-07-06T23:20:39.009002Z"
     }
    }
   },
@@ -166,8 +166,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T00:03:55.932744Z",
-     "end_time": "2023-07-06T00:03:55.937277Z"
+     "start_time": "2023-07-06T23:20:39.009798Z",
+     "end_time": "2023-07-06T23:20:39.014793Z"
     }
    }
   },
@@ -211,8 +211,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T00:03:55.937858Z",
-     "end_time": "2023-07-06T00:03:56.008831Z"
+     "start_time": "2023-07-06T23:20:39.015225Z",
+     "end_time": "2023-07-06T23:20:39.019027Z"
     }
    }
   },
@@ -256,8 +256,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T00:03:55.943850Z",
-     "end_time": "2023-07-06T00:03:56.009799Z"
+     "start_time": "2023-07-06T23:20:39.021718Z",
+     "end_time": "2023-07-06T23:20:39.043468Z"
     }
    }
   },
@@ -301,8 +301,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T00:03:55.949253Z",
-     "end_time": "2023-07-06T00:03:56.013881Z"
+     "start_time": "2023-07-06T23:20:39.026232Z",
+     "end_time": "2023-07-06T23:20:39.043714Z"
     }
    }
   },
@@ -351,8 +351,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T00:03:55.958490Z",
-     "end_time": "2023-07-06T00:03:56.264416Z"
+     "start_time": "2023-07-06T23:20:39.032124Z",
+     "end_time": "2023-07-06T23:20:39.355855Z"
     }
    }
   },
@@ -401,18 +401,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-06T00:06:28.963455Z",
-     "end_time": "2023-07-06T00:06:29.143480Z"
+     "start_time": "2023-07-06T23:20:39.356418Z",
+     "end_time": "2023-07-06T23:20:39.603954Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-07-06T23:20:39.604567Z",
+     "end_time": "2023-07-06T23:20:39.607616Z"
+    }
    }
   }
  ],
