starting to clean up

--- a/domain_comparison/rdm_dms.ipynb
+++ b/domain_comparison/rdm_dms.ipynb
@@ -35,7 +35,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Starting out with Generation of the new DF with only the random mutations"
+    "Starting out with Generation of the new DF with only the random mutations. For further details see the severity_score folder."
    ],
    "metadata": {
     "collapsed": false
