--- a/domain_comparison/all_dms_to_smu.ipynb
+++ b/domain_comparison/all_dms_to_smu.ipynb
@@ -375,27 +375,26 @@
     "\n",
     "all_dms_scores = np.concatenate((dms_scores_dna, dms_scores_dna_smu))\n",
     "\n",
-    "# Create a figure and axis\n",
-    "fig, ax = plt.subplots(figsize=(10, 6))  # Adjust the figure size as needed\n",
     "\n",
-    "# Iterate over each dataset and fit a curve\n",
+    "fig, ax = plt.subplots(figsize=(10, 6))\n",
+    "\n",
     "datasets = ['Regulatory binding domain', 'Regulatory domain with only single mutations']\n",
     "for data, label in zip([dms_scores_reg, dms_scores_reg_smu], datasets):\n",
-    "    # Fit a curve to the data using KDE\n",
+    "\n",
     "    kde = gaussian_kde(data)\n",
     "    x_vals = np.linspace(np.min(all_dms_scores), np.max(all_dms_scores), 1000)\n",
     "    y_vals = kde(x_vals)\n",
     "\n",
-    "    # Plot the fitted curve with label\n",
+    "\n",
     "    ax.plot(x_vals, y_vals, linewidth=2, label=label)\n",
     "\n",
-    "# Add labels, title, and legend\n",
+    "\n",
     "ax.set_xlabel('Value')\n",
     "ax.set_ylabel('Density')\n",
     "ax.set_title('Fitted Curves')\n",
     "ax.legend()\n",
     "\n",
-    "# Show the plot\n",
+    "\n",
     "plt.show()"
    ],
    "metadata": {
